# ffmpeg-compiler

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xaye/compiler/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ffmpeg_jni.cpp  test.c
app/src/main/java/com/xaye/compiler/: FFmpegHelper.java  FilePickerUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xaye/compiler/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
